* 0.0.4
 - follow and unfollow
 - pluggable UI and API

* 0.0.3
 - bug with non-ascii characters in search solved
 - asynchronous API calls
 - favorite/unfavorite tweets
 - Favorites timeline

* 0.0.2
 - tests with coverage check
 - fixed bug with missing dependency in `setup.py`
 - decoration for tabs