@@ -1,6 +1,7 @@
 * 0.0.4
  - follow and unfollow
  - pluggable UI and API
+ - associate callbacks to API calls
 
 * 0.0.3
  - bug with non-ascii characters in search solved
